--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyecto-5",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.7.0",
+    "@paypal/react-paypal-js": "^8.1.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -25,6 +26,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.4.2"
+    "vite": "^4.3.9"
   }
 }
